--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.10.64",
     "@tailwindcss/vite": "^4.1.13",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
